# hosted-cloud-scaleway

./: .gitignore  .secret.skel  Makefile  README.md  ansible.cfg  deployment_guide.html  deployment_guide.md  pyproject.toml
.github/workflows/: init_tf.yaml  main.yml
inventory/: scaleway.yml
inventory/group_vars/: all.yml
inventory/host_vars/: localhost.yaml
playbooks/: scaleway.yml
roles/ipam_driver_scaleway/defaults/: main.yml
roles/ipam_driver_scaleway/handlers/: main.yml
roles/ipam_driver_scaleway/tasks/: main.yml
roles/one-driver/: README.md
roles/one-driver/defaults/: main.yaml
scw-init/001.terraform_state_management/: account_project.tf  backend.tf  label.tf  locals.tf  provider.tf  s3_buckets.tf  terraform.tfvars.skel  variables.tf
scw/001.terraform_state_management/: locals.tf  output.tf  provider.tf  s3_buckets.tf  terraform.tfstate  variables.tf  versions.tf
scw/002.vpc/: backend.tf  outputs.tf  variables.tf  versions.tf  vmtovm_private_network.tf  vpc.tf  vpc_private_network.tf
scw/003.opennebula_instances/: backend.tf  data_remote_states.tf  extra-fip.tf  instances.tf  locals.tf  netplan.tf  netplan_web.tf  outputs.tf  providers.tf  ssh_key.tf  variables.tf  versions.tf
scw/004.opennebula_instances_net/: backend.tf  data_remote_states.tf  locals.tf  netplan.tf  netplan_web.tf  outputs.tf  ufw.tf  variables.tf
scw/004.opennebula_inventories/: backend.tf  inventories.tf  locals.tf
scw/005.opennebula_inventories/: api_key.tf  data_remote_states.tf  inventories.tf  locals.tf  variables.tf  versions.tf
(+20 files in other folders)
